updating NMA_metafor.R to run on full NNMA data

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,8 @@
 .Rhistory
 .RData
 .Ruserdata
+metafor/Analysis Notes for Seth 9-1-2023- UPDATED.docx
+metafor/Analysis Notes for Seth 9-1-2023.docx
+metafor/archive/NMA_metafor 8_18_23.R
+metafor/NNMA Master Database.xlsx
+metafor/~$alysis Notes for Seth 9-1-2023- UPDATED.docx
