--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ metafor/Analysis Notes for Seth 9-1-2023.docx
 metafor/archive/NMA_metafor 8_18_23.R
 metafor/NNMA Master Database.xlsx
 metafor/~$alysis Notes for Seth 9-1-2023- UPDATED.docx
+metafor/~$NNMA Master Database.xlsx
