--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@ metafor/archive/NMA_metafor 8_18_23.R
 metafor/NNMA Master Database.xlsx
 metafor/~$alysis Notes for Seth 9-1-2023- UPDATED.docx
 metafor/~$NNMA Master Database.xlsx
+network-meta-analysis.Rproj
