--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,7 @@ metafor/NNMA Master Database.xlsx
 metafor/~$alysis Notes for Seth 9-1-2023- UPDATED.docx
 metafor/~$NNMA Master Database.xlsx
 network-meta-analysis.Rproj
+metafor/archive/NMA_metafor 9_13_23.R
+metafor/NNMA Master Database 9_12_23.xlsx
+metafor/NNMA Master Database 9_13_23.xlsx
+metafor/~$NNMA Master Database 9_13_23.xlsx
