updates to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -2,14 +2,5 @@
 .Rhistory
 .RData
 .Ruserdata
-metafor/Analysis Notes for Seth 9-1-2023- UPDATED.docx
-metafor/Analysis Notes for Seth 9-1-2023.docx
-metafor/archive/NMA_metafor 8_18_23.R
-metafor/NNMA Master Database.xlsx
-metafor/~$alysis Notes for Seth 9-1-2023- UPDATED.docx
-metafor/~$NNMA Master Database.xlsx
-network-meta-analysis.Rproj
-metafor/archive/NMA_metafor 9_13_23.R
-metafor/NNMA Master Database 9_12_23.xlsx
-metafor/NNMA Master Database 9_13_23.xlsx
-metafor/~$NNMA Master Database 9_13_23.xlsx
+netmeta/
+archive/
