running NMA with one contrast node

--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,5 @@ NMA_counts_by_domain.xlsx
 *_formatted.xlsx
 NMA_study_contrast_list*
 NMA_student_sample_counts.png
+NMA_data_analysis_subset_grpID.*
+NMA checks*
