updates to NMA network graphs

--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,4 @@ NMA_study_contrast_list*
 NMA_student_sample_counts.png
 NMA_data_analysis_subset_grpID.*
 NMA checks*
+NMA output- network graphs.txt
