--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,5 @@ NMA counts*
 NMA_counts_by_domain*
 NMA_output_check*
 new NWA check*
+DATABASE Converting ESs and SEs from 4.0 to 4.1 v5_Data inventory for 4.0 to 4.csv
+DATABASE Converting ESs and SEs from 4.0 to 4.1 v5_Data inventory for 4.0 to 4.xlsx
