--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,4 @@ NMA_output_check*
 new NWA check*
 DATABASE Converting ESs and SEs from 4.0 to 4.1 v5_Data inventory for 4.0 to 4.csv
 DATABASE Converting ESs and SEs from 4.0 to 4.1 v5_Data inventory for 4.0 to 4.xlsx
+cNMA/~$DATABASE Converting ESs and SEs from 4.0 to 4.1 v5_Data inventory for 4.0 to 4.xlsx
