--- a/.gitignore
+++ b/.gitignore
@@ -21,9 +21,9 @@ NMA counts*
 NMA_counts_by_domain*
 NMA_output_check*
 new NWA check*
-DATABASE Converting ESs and SEs from 4.0 to 4.1 v5_Data inventory for 4.0 to 4.csv
-DATABASE Converting ESs and SEs from 4.0 to 4.1 v5_Data inventory for 4.0 to 4.xlsx
-*Data inventory for 4.0 to 4.dta
 cNMA/Data inventory for 4.0 to 4.dta
 cNMA/~$DATABASE Converting ESs and SEs from 4.0 to 4.1 v5_Data inventory for 4.0 to 4.xlsx
+cNMA/Data inventory for 4.0 to 4.dta
+cNMA/DATABASE Converting ESs and SEs from 4.0 to 4.1 v5_Data inventory for 4.0 to 4.csv
+cNMA/DATABASE Converting ESs and SEs from 4.0 to 4.1 v5_Data inventory for 4.0 to 4.xlsx
 cNMA/Data inventory for 4.0 to 4.dta
