updates to converting from 4.0 to 4.1

--- a/.gitignore
+++ b/.gitignore
@@ -22,8 +22,5 @@ NMA_counts_by_domain*
 NMA_output_check*
 new NWA check*
 cNMA/Data inventory for 4.0 to 4.dta
-cNMA/~$DATABASE Converting ESs and SEs from 4.0 to 4.1 v5_Data inventory for 4.0 to 4.xlsx
-cNMA/Data inventory for 4.0 to 4.dta
-cNMA/DATABASE Converting ESs and SEs from 4.0 to 4.1 v5_Data inventory for 4.0 to 4.csv
-cNMA/DATABASE Converting ESs and SEs from 4.0 to 4.1 v5_Data inventory for 4.0 to 4.xlsx
+cNMA/DATABASE Converting ESs and SEs from 4.0 to 4.1 v5_Data inventory for 4.0 to 4.*
 cNMA/Data inventory for 4.0 to 4.dta
