--- a/.gitignore
+++ b/.gitignore
@@ -20,7 +20,7 @@ NMA output- network graphs.txt
 NMA counts*
 NMA_counts_by_domain*
 NMA_output_check*
-new NWA check*
+new NMA check*
 cNMA/Data inventory for 4.0 to 4.dta
 cNMA/DATABASE Converting ESs and SEs from 4.0 to 4.1 v5_Data inventory for 4.0 to 4.*
-cNMA/Data inventory for 4.0 to 4.dta
+NMA_metafor_allnodes_ic_osftest.R
