updates to cNMA ES & SE conversions

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 .Rhistory
 .RData
 .Ruserdata
+
 archive/
 *.docx
 Doing Meta-Analysis With R.R
@@ -21,6 +22,9 @@ NMA counts*
 NMA_counts_by_domain*
 NMA_output_check*
 new NMA check*
-cNMA/Data inventory for 4.0 to 4.dta
-cNMA/DATABASE Converting ESs and SEs from 4.0 to 4.1 v5_Data inventory for 4.0 to 4.*
 NMA_metafor_allnodes_ic_osftest.R
+
+
+cNMA/Data inventory for 4.0 to 4.dta
+cNMA/DATABASE*
+cNMA/_archive*
