updates to cnma ES & SE conversions

--- a/.gitignore
+++ b/.gitignore
@@ -25,7 +25,7 @@ new NMA check*
 NMA_metafor_allnodes_ic_osftest.R
 
 
-cNMA/Data inventory for 4.0 to 4.dta
+cNMA/Data inventory*.dta
 cNMA/DATABASE*
 cNMA/_archive*
 cNMA/dat_cNMS_icW.*
