--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,4 @@ cNMA/_archive*
 cNMA/dat_cNMS_icW.*
 cNMA/MRGs/*.pdf
 cNMA/CNMA Master Database 4-22-25.xlsx
+cNMA/CNMA Master Database 4-22-25_sbm.xlsx
