--- a/.gitignore
+++ b/.gitignore
@@ -31,5 +31,7 @@ cNMA/DATABASE*
 cNMA/_archive*
 cNMA/dat_cNMS_icW.*
 cNMA/MRGs/*.pdf
-cNMA/CNMA Master Database 4-22-25.xlsx
-cNMA/CNMA Master Database 4-22-25_sbm.xlsx
+cNMA/CNMA Master Database 4-22-25*.xlsx
+cNMA/*.csv
+cNMA/cNMA_merge_check_Stata.do
+cnma_merge_errors.xlsx
