updates to cnma merge using new google sheet location

--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,4 @@ cNMA/dat_CNMAtest_v4.csv
 cnma_conversion_unmatched_postmerge_formatted*.xlsx
 
 cNMA/cNMA_merge_check_Stata.do
+cNMA_data_4.1_check.xlsx
