--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,5 @@ cnma_conversion_unmatched_postmerge_formatted*.xlsx
 cNMA/cNMA_merge_check_Stata.do
 cNMA_data_4.1_check.xlsx
 cNMA/merge_check.xlsx
+
+NMA_metafor_allnodes_ic_PUBREV.R
