--- a/.gitignore
+++ b/.gitignore
@@ -25,7 +25,7 @@ NMA_output_check*
 new NMA check*
 NMA_metafor_allnodes_ic_osftest.R
 dat.lopez2019.R
-NMA- student counts by intervention bundle.xlsx
+NMA- student counts by intervention bundle*.xlsx
 
 
 cNMA/Data inventory*.dta
