updates to sample size counts

--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,7 @@ new NMA check*
 NMA_metafor_allnodes_ic_osftest.R
 dat.lopez2019.R
 NMA- student counts by intervention bundle*.xlsx
+NMA- student counts by domain & intervention bundle_SK Edits.xlsx
 
 
 cNMA/Data inventory*.dta
