--- a/.gitignore
+++ b/.gitignore
@@ -28,7 +28,7 @@ dat.lopez2019.R
 NMA- student counts by intervention bundle*.xlsx
 NMA- student counts by domain & intervention bundle_SK Edits.xlsx
 
-
+1-Step CNMA Template SBMv2.R
 cNMA/Data inventory*.dta
 cNMA/DATABASE*
 cNMA/_archive*
