update to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -29,6 +29,8 @@ NMA- student counts by intervention bundle*.xlsx
 NMA- student counts by domain & intervention bundle_SK Edits.xlsx
 
 1-Step CNMA Template SBMv2.R
+1-Step CNMA Template dat__es_anxiety.R
+dat_es_anxiety.xlsx
 cNMA/Data inventory*.dta
 cNMA/DATABASE*
 cNMA/_archive*
